--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id='container'>
+		<p>Before Element</p>
+		<p>This is the main container element</p>
+		<p>After Element</p>
+		
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
