--- a/main.html
+++ b/main.html
@@ -9,7 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div id='container'>
-		<p>Before Element</p>
+		<div>		<p>Before Element</p>
+</div>
 		<p>This is the main container element</p>
 		<p>After Element</p>
 		
