--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div id='container'>
+		<div>Before Element</div>
 		<p>Before Element</p>
 		<p>This is the main container element</p>
 		<p>After Element</p>
