--- a/main.html
+++ b/main.html
@@ -9,10 +9,9 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div id='container'>
-		<div>Before Element</div>
-		<p>Before Element</p>
-		<p>This is the main container element</p>
-		<p>After Element</p>
+		<p id='txt'><span>Before Element</span>
+		This is the main container element
+		<span>After Element</span></p>
 		
 	</div>
     <script type="text/javascript" src="./script.js">
