--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div id='container'>
-		<p id='txt'><span id='before'>Before Element </span>
+		<p id='txt'><span class='before'>Before Element </span>
 		This is the main container element
-		<span id='after'>After Element</span></p>
+		<span class='after'>After Element</span></p>
 		
 	</div>
     <script type="text/javascript" src="./script.js">
